11/21/07 fix bug [ 1532898 ] Context path must be /*