@@ -62,6 +62,13 @@
 			<version>1.1.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+	       <groupId>org.jmock</groupId>
+	       <artifactId>jmock</artifactId>
+	       <version>2.1.0</version>
+	       <scope>test</scope>
+	       <type>jar</type>
+	    </dependency>
 	</dependencies>
 	<reporting>
 	<plugins>
