@@ -9,7 +9,8 @@
  *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or
+implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
@@ -29,114 +30,130 @@ import java.io.IOException;
 
 public class DoHead extends AbstractMethod {
 
-    protected int debug;
-    protected String dftIndexFile;
-    protected WebdavStore store;
-    protected String insteadOf404;
-    protected ResourceLocks resLocks;
-    protected MimeTyper mimeTyper;
-    protected int contLength;
+	protected int debug;
+	protected String dftIndexFile;
+	protected WebdavStore store;
+	protected String insteadOf404;
+	protected ResourceLocks resLocks;
+	protected MimeTyper mimeTyper;
+	protected int contLength;
 
-    public DoHead(WebdavStore store, String dftIndexFile, String insteadOf404, ResourceLocks resourceLocks, MimeTyper mimeTyper, int contentLengthHeader, int debug) {
-        this.store = store;
-        this.dftIndexFile = dftIndexFile;
-        this.insteadOf404 = insteadOf404;
-        this.resLocks = resourceLocks;
-        this.mimeTyper = mimeTyper;
-        this.contLength = contentLengthHeader;
-        this.debug = debug;
-    }
+	public DoHead(WebdavStore store, String dftIndexFile, String insteadOf404,
+			ResourceLocks resourceLocks, MimeTyper mimeTyper,
+			int contentLengthHeader, int debug) {
+		this.store = store;
+		this.dftIndexFile = dftIndexFile;
+		this.insteadOf404 = insteadOf404;
+		this.resLocks = resourceLocks;
+		this.mimeTyper = mimeTyper;
+		this.contLength = contentLengthHeader;
+		this.debug = debug;
+	}
 
+	public void execute(HttpServletRequest req, HttpServletResponse resp)
+			throws IOException {
 
-    public void execute(HttpServletRequest req, HttpServletResponse resp) throws IOException {
-        String path = getRelativePath(req);
-        if (debug == 1)
-            System.err.println("-- do " + req.getMethod());
+		// determines if the uri exists.
 
-        if (store.isFolder(path)) {
-            if (dftIndexFile != null && !dftIndexFile.trim().equals("")) {
-                resp.sendRedirect(resp.encodeRedirectURL(req.getRequestURI()
-                        + this.dftIndexFile));
-                return;
-            }
-        }
-        if (!store.objectExists(path)) {
-            if (this.insteadOf404 != null && !insteadOf404.trim().equals("")) {
-                path = this.insteadOf404;
-            }
-        }
+		boolean bUriExists = false;
 
-        String lockOwner = "doGet" + System.currentTimeMillis()
-                + req.toString();
+		String path = getRelativePath(req);
+		if (debug == 1)
+			System.err.println("-- do " + req.getMethod());
 
-        if (resLocks.lock(path, lockOwner, false, 0)) {
-            try {
+		if (store.isFolder(path)) {
+			bUriExists = true;
+			if (dftIndexFile != null && !dftIndexFile.trim().equals("")) {
 
-                if (store.isResource(path)) {
-                    // path points to a file but ends with / or \
-                    if (path.endsWith("/") || (path.endsWith("\\"))) {
-                        resp.sendError(HttpServletResponse.SC_NOT_FOUND, req
-                                .getRequestURI());
-                    } else {
+				resp.sendRedirect(resp.encodeRedirectURL(req.getRequestURI()
+						+ this.dftIndexFile));
+				return;
+			}
+		}
+		if (!store.objectExists(path)) {
 
-                        // setting headers
-                        long lastModified = store.getLastModified(path)
-                                .getTime();
-                        resp.setDateHeader("last-modified", lastModified);
+			if (this.insteadOf404 != null && !insteadOf404.trim().equals("")) {
+				path = this.insteadOf404;
+			}
 
-                        long resourceLength = store.getResourceLength(path);
+		} else
+			bUriExists = true;
 
-                        if (contLength == 1) {
-                            if (resourceLength > 0) {
-                                if (resourceLength <= Integer.MAX_VALUE) {
-                                    resp.setContentLength((int) resourceLength);
-                                } else {
-                                    resp.setHeader("content-length", ""
-                                            + resourceLength);
-                                    // is "content-length" the right header?
-                                    // is
-                                    // long
-                                    // a valid format?
-                                }
-                            }
-                        }
+		String lockOwner = "doGet" + System.currentTimeMillis()
+				+ req.toString();
 
-                        String mimeType = mimeTyper.getMimeType(path);
-                        if (mimeType != null) {
-                            resp.setContentType(mimeType);
-                        } else {
-                            int lastSlash = path.replace('\\', '/')
-                                    .lastIndexOf('/');
-                            int lastDot = path.indexOf(".", lastSlash);
-                            if (lastDot == -1) {
-                                resp.setContentType("text/html");
-                            }
-                        }
+		if (resLocks.lock(path, lockOwner, false, 0)) {
+			try {
 
-                        doBody(resp, path);
-                    }
-                } else {
-                    folderBody(path, resp, req);
-                }
-            } catch (AccessDeniedException e) {
-                resp.sendError(WebdavStatus.SC_FORBIDDEN);
-            } catch (ObjectAlreadyExistsException e) {
-                resp.sendError(WebdavStatus.SC_NOT_FOUND, req.getRequestURI());
-            } catch (WebdavException e) {
-                resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
-            } finally {
-                resLocks.unlock(path, lockOwner);
-            }
-        } else {
-            resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
-        }
-    }
+				if (store.isResource(path)) {
+					// path points to a file but ends with / or \
+					if (path.endsWith("/") || (path.endsWith("\\"))) {
+						resp.sendError(HttpServletResponse.SC_NOT_FOUND, req
+								.getRequestURI());
+					} else {
 
-    protected void folderBody(String path, HttpServletResponse resp, HttpServletRequest req) throws IOException {
-        // no body for HEAD
-    }
+						// setting headers
+						long lastModified = store.getLastModified(path)
+								.getTime();
+						resp.setDateHeader("last-modified", lastModified);
 
-    protected void doBody(HttpServletResponse resp, String path) throws IOException {
-        // no body for HEAD
-    }
+						long resourceLength = store.getResourceLength(path);
+
+						if (contLength == 1) {
+							if (resourceLength > 0) {
+								if (resourceLength <= Integer.MAX_VALUE) {
+									resp.setContentLength((int) resourceLength);
+								} else {
+									resp.setHeader("content-length", ""
+											+ resourceLength);
+									// is "content-length" the right header?
+									// is
+									// long
+									// a valid format?
+								}
+							}
+						}
+
+						String mimeType = mimeTyper.getMimeType(path);
+						if (mimeType != null) {
+							resp.setContentType(mimeType);
+						} else {
+							int lastSlash = path.replace('\\', '/')
+									.lastIndexOf('/');
+							int lastDot = path.indexOf(".", lastSlash);
+							if (lastDot == -1) {
+								resp.setContentType("text/html");
+							}
+						}
+
+						doBody(resp, path);
+					}
+				} else {
+					folderBody(path, resp, req);
+				}
+			} catch (AccessDeniedException e) {
+				resp.sendError(WebdavStatus.SC_FORBIDDEN);
+			} catch (ObjectAlreadyExistsException e) {
+				resp.sendError(WebdavStatus.SC_NOT_FOUND, req.getRequestURI());
+			} catch (WebdavException e) {
+				resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
+			} finally {
+				resLocks.unlock(path, lockOwner);
+			}
+		} else {
+			resp.sendError(WebdavStatus.SC_INTERNAL_SERVER_ERROR);
+		}
+		if (!bUriExists)
+			resp.setStatus(WebdavStatus.SC_NOT_FOUND);
+	}
+
+	protected void folderBody(String path, HttpServletResponse resp,
+			HttpServletRequest req) throws IOException {
+		// no body for HEAD
+	}
+
+	protected void doBody(HttpServletResponse resp, String path)
+			throws IOException {
+		// no body for HEAD
+	}
 }
