@@ -1,1 +1,4 @@
-11/21/07 fix bug [ 1532898 ] Context path must be /*
+11/21/07
++ fix bug [ 1532898 ] Context path must be /*
++ add jmock 2.1 dependency
++ fix bug [ 1496904 ] Creating new directory does not work!
